hover adicionado junto com transition no btn

--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,17 @@ body {
     font-weight: 700;
     padding: 14px;
     border-radius: 7px;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 12px;
+    transition: background 0.3s ease-in-out;
 
+}
+
+.container .card .info .btn:hover {
+    background-color: var(--dark-green);
 }
 
 .container .card .info .btn::before {
